Thu Nov 21 17:16:00 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: enable "RGENGC_ESTIMATE_OLDSPACE" option as default.
	  Without this option, some application consumes huge memory.
	  (and there are only a few performance down)

	  Introduced new environment variables:
	  * RUBY_GC_HEAP_OLDSPACE (default 16MB)
	  * RUBY_GC_HEAP_OLDSPACE_MAX (default 128 MB)
	  * RUBY_GC_HEAP_OLDSPACE_GROWTH_FACTOR (default 1.2)

	* gc.c (initial_malloc_limit): rename to initial_malloc_limit_min.

Thu Nov 21 16:51:34 2013  Zachary Scott  <e@zzak.io>

	* ext/digest/bubblebabble/bubblebabble.c: Teach RDoc digest/bubblebabble

Thu Nov 21 16:50:16 2013  Zachary Scott  <e@zzak.io>

	* test/digest/test_digest.rb: Add more tests for digest/bubblebabble

Thu Nov 21 16:32:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#method_missing): try private methods defined in
	  Kernel after the target.  [Fixes GH-449]

Thu Nov 21 16:25:08 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/uri/test_generic.rb (URI#test_merge): Test uri + URI(path)
	  in addition to uri + path.

Thu Nov 21 15:36:08 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/buffering.rb: [DOC] Fix HEREDOC comment for
	  OpenSSL::Buffering which breaks overview because of RDoc bug

Thu Nov 21 14:46:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval_intern.h (SAVE_ROOT_JMPBUF): workaround for the failure of
	  test/ruby/test_exception.rb on Windows.
	  wrap by __try and __exception statements on mswin to raise SIGSEGV
	  when EXCEPTION_STACK_OVERFLOW is occurred, because MSVCRT doesn't
	  handle the exception.
	  however, (1) mingw-gcc doesn't support __try and __exception
	  statements, and (2) we cannot retry SystemStackError after this
	  change yet (maybe crashed) because SEH and longjmp() are too
	  uncongenial.

	* signal.c (check_stack_overflow, CHECK_STACK_OVERFLOW): now defined on
	  Windows, too.

	* thread_win32.c (ruby_stack_overflowed_p): ditto.
